%%{init: {'theme': 'dark', 'themeVariables': { 'lineColor': '#ffffffff' }}}%%
classDiagram

class 凡例 {
  --> 依存
  --|> 継承
  ..|> インターフェース実装
  日本語クラス = 概念的な代表表現
}

namespace app_batch {

  class BatchScheduler_index {
    <<entrypoint>>
  }

  class ジョブ {
    +execute()
  }

  class CommonScraperService {
    -scraper: IProductCollector
    -repository: IProductRepository
    +saveProductsFromUrl(url): Promise<void>
  }

  class BaseScraper {
    <<abstract>>
    +siteName: string
    +itemSelector: string
    +extractors: ProductExtractors
    +collectProductsFromUrl(url): Promise<ProductEntity[]>
  }

  class 継承Scraper {
  }

  class ProductExtractors {
    <<interface>>
    +title: ExtractionLogic
    +price: ExtractionLogic
    +detailPath: ExtractionLogic
    +imagePath: ExtractionLogic
  }

}

namespace app_common {

  class IProductCollector {
    <<interface>>
    +collect(url): Promise<ProductEntity[]>
  }

  class IProductRepository {
    <<interface>>
    +save(products): Promise<void>
  }

}

BatchScheduler_index --> ジョブ

ジョブ --> CommonScraperService

CommonScraperService --> IProductCollector
CommonScraperService --> IProductRepository

BaseScraper ..|> IProductCollector
BaseScraper --> ProductExtractors

継承Scraper --|> BaseScraper
